Fix page height, make turn-phone notice prettier, make admin-page show CORRECT audiofile names

--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -7,7 +7,7 @@
 .box {
   margin: 8px;
   border-width: 0px;
-  background: rgba(95, 157, 159,0.6);
+  background: rgba(235, 245, 255, 1);
 }
 .modal-backdrop {
   pointer-events: none;
